<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ChromaDoze</string>
    <string name="copyright_line">© 2025 Paul Marks</string>
    <string name="notification_text">ChromaDoze is running</string>
    <string name="about_menu">About</string>
    <string name="options">Options</string>
    <string name="generating">Generating IDCT blocks:&#160;</string>
    <string name="play_stop">Play/Stop</string>
    <string name="lock_unlock">Lock/Unlock Input</string>
    <string name="memory">Memory</string>
    <string name="unsaved">(unsaved)</string>
    <string name="stop_reason_autoplay">Stopped by auto-play option</string>
    <string name="stop_reason_audiofocus">Lost audio focus</string>
    <string name="stop_reason_notification">Stopped from notification bar</string>
    <string name="stop_reason_toolbar">Stopped from toolbar</string>
    <string name="stop_reason_mediabutton">Stopped by media button</string>
    <string name="stop_reason_silent">Exited while silent</string>
    <string name="stop_reason_mysterious">Stopped mysteriously</string>
    <string name="stop_reason_restarted">Restarted by the OS</string>
    <string name="channel_name">Stop button</string>
    <string name="channel_description">This notification appears when ChromaDoze is generating noise</string>
    <string name="enable_notifications">Please enable the \'■\' notification</string>
    <string name="options_swell">Amplitude Wave</string>
    <string name="options_swell_amplitude">Swell amplitude variation</string>
    <string name="options_swell_period">Swell period</string>
    <string name="options_advanced">Advanced Options</string>
    <string name="options_auto_play">Play Automatically on Open</string>
    <string name="options_ignore_focus">Ignore Audio Focus\n(Keep playing over other apps)</string>
    <string name="options_use_fft">Use IFFT instead of IDCT</string>
    <string name="options_volume_limit">Reduce Volume</string>
</resources>