<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingBottom="10dp"
            android:paddingTop="3dp"
            android:text="@string/options_swell"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/options_swell_amplitude"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:src="@drawable/wave_amplitude" />

                <SeekBar
                    android:id="@+id/MinVolSeek"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/MinVolText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="100%" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="1sp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_column="1"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/HiddenSpacerText"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text=":999 ms:"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/options_swell_period"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:src="@drawable/wave_period" />

                <SeekBar
                    android:id="@+id/PeriodSeek"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:max="53" />

                <TextView
                    android:id="@+id/PeriodText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:text="60 s" />
            </TableRow>
        </TableLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#555"></View>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/options_advanced"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/AutoPlayCheck"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/options_auto_play" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/IgnoreAudioFocusCheck"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/options_ignore_focus" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/UseFFTCheck"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/options_use_fft" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/VolumeLimitCheck"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/options_volume_limit" />

        <SeekBar
            android:id="@+id/VolumeLimitSeek"
            android:layout_width="fill_parent"
            android:layout_height="48dp" />
    </LinearLayout>

</ScrollView>